fix the slight layout issue

--- a/src/index.css
+++ b/src/index.css
@@ -174,3 +174,9 @@ body {
   white-space: nowrap;
   border: 0;
 }
+
+.center {
+  box-sizing: content-box;
+  margin-inline: auto;
+  max-inline-size: var(--measure);
+}
